# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: github-actions-demo.yml  test_file.yml
gendiff/: .gitignore  Makefile  __init__.py  cli.py  create_diff.py  engine.py  entering_point.py  formatters.py  parser.py
gendiff/formatters/: create_json.py  create_plain.py  prettify.py
gendiff/scripts/: gendiff.py
hexlet-code/scripts/: gendiff.py
tests/: answer.py  test_gendiff.py  test_json.py  test_nested.py  test_plain.py  test_yaml.py  tests_json.py  tests_nested.py  tests_plain.py  tests_yaml.py
tests/fixtures/: answer_nested_json.txt
