[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "My second project"
authors = ["Antesser <ahriman.kun@gmail.com>"]
packages = [
  { include = "hexlet-code" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "hexlet-code.scripts.gendiff:main"